# flightscope

./: .gitignore  config.toml  dual_oled_radar.py  pyproject.toml
flightscope/: aircraft.py  app.py  config.py  datasource.py  display.py  geometry.py  info.py  metar.py  metar_client.py  mock_datasource.py  oled_backend.py  pygame_backend.py  radar.py  tft_backend.py  tracker.py
